added new Favicon and title

--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/uhr.png" />
+    <link rel="icon" type="image/svg+xml" href="/SYP_LOGOS_1.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Klassenorganisations App</title>
+    <title>SCHEDYOU</title>
   </head>
   <body>
     <div id="root"></div>
